--- a/css/timeline.css
+++ b/css/timeline.css
@@ -252,3 +252,127 @@ body {
 .for-text {
   font-weight: 400;
 }
+
+/* modal for user edit */
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: .6s;
+}
+.popup.is-show {
+  opacity: 1;
+  visibility: visible;
+}
+.popup-inner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 80%;
+  max-width: 600px;
+  padding: 50px;
+  background-color: rgba(21, 32, 43);
+  z-index: 2;
+  border-radius: 25px;
+}
+.popup-inner img {
+  width: 100%;
+}
+.close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+}
+.close-btn i {
+  font-size: 20px;
+  color: #e8f0fe;
+}
+.black-background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.8);
+  z-index: 1;
+  cursor: pointer;
+}
+.cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.input-label {
+  border-bottom: 2px solid rgba(136, 153, 166);
+  background-color: rgb(25, 32, 59);
+  border-bottom-color: rgba(136, 153, 166);
+  text-size-adjust: 100%;
+}
+.input-cover > label {
+  color: #8899A6;
+}
+
+.input-cover {
+  padding: 10px 15px;
+}
+.input-indication {
+  padding: 5px 10px 0;
+  font-weight: 400;
+}
+
+form input {
+  width: 100%;
+  height: 29px;
+  background-color: #e8f0fe;
+  padding: 2px 10px 5px;
+}
+
+.btn-cover {
+  margin: 10px;
+}
+
+#users_edit_submit {
+  display: inline-block;
+  width: 100%;
+  color: white;
+  font-weight: 700;
+  background-color: rgba(24, 190, 99);
+  line-height: 1;
+  max-width: 100%;
+  padding: 20px;
+  border-radius: 25px;
+  border: none;
+  font-size: 15px;
+}
+
+#users_edit_submit:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+#users_delete_submit {
+  display: block;
+  width: 30%;
+  color: red;
+  background-color: rgba(255, 0, 0, 0);
+  padding: 5px;
+  border: 1px solid red
+}
+
+#users_delete_submit:hover {
+  cursor: pointer;
+  background-color: red;
+  opacity: 0.8;
+  color: white;
+}
+
