--- a/css/timeline.css
+++ b/css/timeline.css
@@ -124,32 +124,62 @@ body {
 }
 .column {
   height: 100vh;
-  width: 100vw;
+  width: 30%;
 }
 
 .left-column {
-  align-items: flex-end;
-  text-align: right;
-
+  /* align-items: flex-end; */
+  /* text-align: right; */
+  padding-left: 10%;
+  box-sizing: border-box;
+  /* margin-right: 100px; */
 }
 .side-items {
-  padding: 0 20px;
-  justify-content: space-between;
+  /* padding: 0 145px 0 0 ; */
+  /* margin-left: auto; */
+  /* margin-left: 100px; */
+
+
 }
 .logo-icon {
-  height: 50px;
-  padding-top: 2px;
-  padding-bottom: 2px;
+  height: 30px;
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
 .side-links {
   margin-top: 2px;
   margin-bottom: 5px;
 }
 
-.icon {
-  height: 30px;
-
+.flex {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
 }
+
+.icon {
+  font-size: 20px;
+  margin-right: 25px;
+  margin-left: 5px;
+}
+
+.fa-home {
+  margin-right: 27px;
+}
+
+.fa-comments {
+  margin-right: 26px;
+}
+
+.fa-cog {
+  margin-right: 28px;
+}
+.icon-text {
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 25px;
+}
+
 
 .side-links a {
   text-decoration: none;
@@ -462,4 +492,61 @@ form input {
   cursor: pointer;
   background-color: rgba(24, 190, 99, 0.8);
   color: white;
+}
+
+
+.unfollow_btn {
+  margin-top: 25px;
+  border: 1px solid rgba(255, 0, 0, 0.5);
+  color: rgba(255, 0, 0, 0.5);
+  background-color: rgba(24, 190, 99, 0);
+  width: 78px;
+  height: 30px;
+  display: block;
+  border-radius: 15px;
+  margin-left: auto;
+  margin-right: 15px;
+}
+
+.unfollow_btn:hover {
+  cursor: pointer;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+}
+
+.tabs_modified {
+
+  margin-top: 15px;
+  margin-left: 30px;
+  max-width: 350px;
+  background-color: rgb(25, 39, 52);
+  border-radius: 25px;
+  max-height: 540px;
+  padding-bottom: 50px;
+
+
+}
+.right-column {
+  overflow-y: scroll;
+}
+
+.user_timeline_header {
+  border-radius: 25px 25px 0 0;
+  border-bottom: 1px solid #37444c;
+  width: auto;
+  height: 45px;
+  background-color: rgb(25, 39, 52);
+  line-height: 45px;
+  font-size: 15px;
+  padding-left: 15px;
+  color: white;
+  display: block;
+}
+
+.icon-post {
+  margin-top: auto;
+  opacity: 0.5;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-around;
 }
